# signal-dbus-client

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
src/: error.rs  lib.rs  main.rs  proto.rs
src/account/: account_manager.rs  messages.rs  mod.rs  pre_keys.rs
src/common/: api_config.rs  mod.rs  signal_certs.pem
src/proto/: signal_service.proto  signal_service.rs
src/register/: credentials.rs  mod.rs  provision.rs  register_device.rs
src/send/: mod.rs
src/store/: identity.rs  kyber_pre_key.rs  mod.rs  pre_key.rs  session.rs  signed_pre_key.rs  state_store.rs  utils.rs
src/utils/: http.rs  http_client.rs  https_wss_connector.rs  mod.rs  network.rs  qrcode.rs  serde.rs  time.rs  tls_stream.rs  wss_connection.rs
