[package]
name = "signal-dbus-client"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.22.2" }
signal-provisioning-api = { path = "../signal-provisioning-api" }
# signal-provisioning-api = { git = "https://github.com/tm-drtina/signal-provisioning-api.git", tag = "v0.6.0" }

rand = "0.7.3"

qrcode = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = "1.1.2"
prost = "0.9"

futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
rustls-pemfile = "1"
thiserror = "1.0.30"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tokio-rustls = "0.23.1"
tokio-tungstenite = "0.18"

clap = { version = "4", features = ["derive"] }
dirs = "4"
async-trait = "0.1"

sled = "0.34.6"

[build-dependencies]
prost-build = "0.9"
