[package]
name = "signal-dbus-client"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.31.0" }
signal-provisioning-api = { git = "https://github.com/tm-drtina/signal-provisioning-api.git", branch = "libsignal-0.31.0" } #, tag = "v0.7.0" }

rand = "0.8"

qrcode = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = { version = "1.1.2", features = ["serde"] }
prost = "0.9"

futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
rustls-pemfile = "1"
thiserror = "1.0.30"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tokio-rustls = "0.23.1"
tokio-tungstenite = "0.18"

clap = { version = "4", features = ["derive"] }
dirs = "4"
async-trait = "0.1"

sled = "0.34.6"

[build-dependencies]
prost-build = "0.9"

[patch.crates-io]
# Follow patches from libsignal
# Use our fork of curve25519-dalek for zkgroup support.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }
x25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }
