[package]
name = "signal-dbus-client"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.37.0" }
signal-provisioning-api = { git = "https://github.com/tm-drtina/signal-provisioning-api.git", branch = "libsignal-0.37.0" } #, tag = "v0.7.0" }

rand = "0.8"
base64 = "0.21"
uuid = { version = "1.1.2", features = ["serde"] }
prost = "0.12"

async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures-util = { version = "0.3", default-features = false }
qrcode = { version = "0.13", default-features = false }
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-manual-roots", "trust-dns", "json"] }
rustls = "0.22"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.6"
thiserror = "1.0.30"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
prost-build = "0.12"
